objects/FSL_Additional_Sub_Type__c.object
<CustomObject>
    <fields>
        <fullName>Assignment_Number__c</fullName>
        <label>Assignment Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Job_Line_Number__c</fullName>
        <label>ERP Job Line Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_Account__c</fullName>
        <label>Payer Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Order__c</fullName>
        <label>Service Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Additional Sub Types</relationshipLabel>
        <relationshipName>Additional_Sub_Types</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub Type</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimesheetFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TimesheetFlag</label>
        <type>Checkbox</type>
    </fields>
    <label>Additional Sub Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Primary__c</columns>
        <columns>Service_Order__c</columns>
        <columns>Assignment_Number__c</columns>
        <columns>Payer_Account__c</columns>
        <columns>Status__c</columns>
        <columns>ERP_Job_Line_Number__c</columns>
        <columns>Sub_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Additional Sub Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>